--- a/services/profile/package.json
+++ b/services/profile/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/server.ts",
+    "build-ts": "tsc",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "start": "node dist/server.js",
+    "build": "npm run tslint && npm run build-ts",
+    "test": "jest --coverage --forceExit --config jest-config.json",
+    "test-watch": "jest --watch --config jest-config.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "graphql": "^14.0.2",
+    "graphql-yoga": "^1.16.7",
     "prisma-client-lib": "^1.20.7"
   },
   "devDependencies": {
+    "graphqlgen": "^0.4.0",
+    "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   }
