--- a/services/user/package.json
+++ b/services/user/package.json
@@ -21,9 +21,15 @@
     "prisma-client-lib": "^1.20.7"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.9",
+    "@types/supertest": "^2.0.6",
     "graphqlgen": "^0.4.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.6",
+    "supertest": "^3.3.0",
+    "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.6"
   }
 }
