stubbing out users, setting up winston, dotenv

--- a/services/user/graphqlgen.yml
+++ b/services/user/graphqlgen.yml
@@ -4,7 +4,8 @@ schema: ./src/schema.graphql
 context: ./src/types.ts:Context
 models:
   files:
-    - ./src/generated/prisma-client/index.ts
+    - ./src/types.ts
+    - path: ./src/generated/prisma-client/index.ts
 
 output: ./src/generated/graphqlgen.ts
 
