--- a/services/user/package.json
+++ b/services/user/package.json
@@ -16,12 +16,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
+    "dotenv": "^6.1.0",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
-    "prisma-client-lib": "^1.20.7"
+    "jsonwebtoken": "^8.4.0",
+    "prisma-client-lib": "^1.20.7",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/dotenv": "^6.1.0",
     "@types/jest": "^23.3.9",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/supertest": "^2.0.6",
     "graphqlgen": "^0.4.0",
     "jest": "^23.6.0",
