--- a/gateway/package.json
+++ b/gateway/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^6.1.0",
     "@types/jest": "^23.3.9",
     "@types/supertest": "^2.0.6",
     "jest": "^23.6.0",
@@ -21,7 +22,9 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "dotenv": "^6.1.0",
     "graphql": "^14.0.2",
-    "graphql-yoga": "^1.16.7"
+    "graphql-yoga": "^1.16.7",
+    "winston": "^3.1.0"
   }
 }
