--- a/services/profile/package.json
+++ b/services/profile/package.json
@@ -16,11 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
-    "prisma-client-lib": "^1.20.7"
+    "prisma-client-lib": "^1.20.7",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.0",
     "@types/jest": "^23.3.9",
     "@types/supertest": "^2.0.6",
     "graphqlgen": "^0.4.0",
