--- a/gateway/package.json
+++ b/gateway/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
     "@types/jest": "^23.3.9",
+    "@types/node-fetch": "^2.1.4",
     "@types/supertest": "^2.0.6",
     "jest": "^23.6.0",
     "nodemon": "^1.18.6",
@@ -22,9 +23,13 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-http": "^1.5.5",
     "dotenv": "^6.1.0",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
+    "node-fetch": "^2.3.0",
     "winston": "^3.1.0"
   }
 }
