--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/server.ts",
+    "build-ts": "tsc",
+    "merge-schemas": "ts-node src/mergeSchemas.ts",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "start": "node dist/server.js",
+    "build": "npm run tslint && npm run build-ts",
+    "test": "jest --coverage --forceExit --config jest-config.json",
+    "test-watch": "jest --watch --config jest-config.json"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +19,6 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
     "@types/jest": "^23.3.9",
-    "@types/node-fetch": "^2.1.4",
     "@types/supertest": "^2.0.6",
     "jest": "^23.6.0",
     "nodemon": "^1.18.6",
@@ -23,13 +29,11 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "apollo-link": "^1.2.3",
-    "apollo-link-context": "^1.0.9",
-    "apollo-link-http": "^1.5.5",
     "dotenv": "^6.1.0",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
-    "node-fetch": "^2.3.0",
+    "merge-graphql-schemas": "^1.5.8",
+    "prisma-binding": "^2.2.5",
     "winston": "^3.1.0"
   }
 }
