--- a/gateway/package.json
+++ b/gateway/package.json
@@ -26,6 +26,7 @@
     "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.1.6"
   },
   "dependencies": {
